--- a/home/static/css/sidebar.css
+++ b/home/static/css/sidebar.css
@@ -42,7 +42,7 @@
 
 .saved-list-divider {
     background-color: var(--sidenav-bg-color);
-    height: 8vh;
+    height: var(--secondary-navbar-height);
     box-shadow: 0 4px 2px -4px #000000;
 
 }
@@ -149,7 +149,7 @@
 
 .sidebar-toggle {
     position: absolute;
-    height: 8vh;
+    height: var(--secondary-navbar-height);
     right: 0;
 
 }
@@ -163,20 +163,20 @@
 } */
 
 .sidebar-toggle-button {
-    font-size: 5vh;
+    font-size: 4.5vh;
     user-select: none;
 }
 
 .sidebar-toggle-button > span:first-child  {
-    right: -7vh;
+    right: 0.4vw;
 }
 
 .sidebar-toggle-button > span:last-child  {
-    right: 0.5vh;
+    right: -0.1vw;
 }
 
 .sidebar-toggle-button > span {
-
+    position: absolute;
     top: 1vh;
 }
 
